# ImageSearchApp

./: .env.example  .gitignore  LICENSE  README.md  build.sh  pyproject.toml
apps/search_api/: apps.py  urls.py
apps/search_api/views/: image_list_by_keyword_view.py
apps/server_api/: apps.py
apps/server_api/views/: health_check_view.py
base/: settings.py  urls.py
client/: .env.local.example  .gitignore  README.md  index.html  package-lock.json  package.json
client/public/data/: searches.json
client/src/: main.jsx  theme.jsx
client/src/api/: apiSlice.js
client/src/app/: layout.tsx  page.tsx
client/src/app/about/: loading.tsx  page.tsx
client/src/app/results/: page.tsx
client/src/app/store/: rootReducer.jsx
client/src/components/ButtonIcon/: ButtonIcon.tsx
client/src/components/Card/: ImageCard.jsx
client/src/components/CustomPagination/: CustomPagination.tsx
client/src/components/Divider/: Divider.tsx
client/src/components/DividerGrow/: DividerGrow.tsx
client/src/components/ImageCard/: ImageCard.tsx
client/src/components/ImageCardGroup/: ImageCardGroup.tsx
client/src/components/Navigation/: NavPopularSearches.jsx  Navigation.jsx
client/src/components/Results/: ImagesResults.jsx
client/src/components/Search/: SearchForm.jsx  SearchResults.jsx
client/src/interfaces/: IImage.ts
client/src/pages/: About.jsx  Home.jsx  NotFoundPage.jsx
client/src/routes/: Router.jsx
client/src/styles/: index.css
image_search_api/: apps.py  urls.py  views.py
my_django_api/: asgi.py  settings.py  urls.py  wsgi.py
utils/: mongo_connection.py
(+15 files in other folders)
