[tool.poetry]
name = "imagesearchapp"
version = "0.1.0"
description = "Image Search is an application for searching images."
authors = ["nivwer"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
django-cors-headers = "^4.3.1"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
